Feature nxp 22107 comp workmanager (#2)
NXP-22107: First impl of WorkManager that use Computation as worker